--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -9,18 +9,78 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <!-- Fragmentar -->
+        <!-- Información del Usuario -->
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/img_profile_main"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:src="@drawable/logo_uis"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/address_user_pet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
+            android:singleLine="true"
+            android:text="@string/address_example"
+            android:textFontWeight="500"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="@+id/imageView2" />
+
+        <TextView
+            android:id="@+id/location_user_pet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/label_location"
+            app:layout_constraintBottom_toTopOf="@+id/address_user_pet"
+            app:layout_constraintStart_toEndOf="@+id/imageView2" />
+
+        <TextView
+            android:id="@+id/email_name_user_pet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="@string/label_email"
+            app:layout_constraintBottom_toBottomOf="@+id/img_profile_main"
+            app:layout_constraintStart_toEndOf="@+id/img_profile_main"
+            app:layout_constraintTop_toTopOf="@+id/img_profile_main"
+            app:layout_constraintVertical_bias="0.6" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            app:tint="@color/teal_200"
+            app:layout_constraintEnd_toEndOf="@+id/img_profile_main"
+            app:layout_constraintStart_toStartOf="@+id/img_profile_main"
+            app:layout_constraintTop_toBottomOf="@+id/img_profile_main"
+            app:srcCompat="@drawable/ic_baseline_pets" />
+
+        <!-- Listado de las mascotas en adopción y registro de nuevas  -->
         <Button
             android:id="@+id/btn_regiter_pet_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="32dp"
             android:text="@string/label_pets"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.15"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            app:layout_constraintTop_toBottomOf="@+id/address_user_pet" />
+        <!-- Salir de la sesión  -->
         <Button
             android:id="@+id/btn_sign_out_pet_profile"
             android:layout_width="wrap_content"
@@ -28,7 +88,7 @@
             android:layout_marginTop="32dp"
             android:text="@string/label_sign_out"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.15"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_regiter_pet_profile" />
     </androidx.constraintlayout.widget.ConstraintLayout>
