--- a/app/src/main/res/layout/fragment_register_pet.xml
+++ b/app/src/main/res/layout/fragment_register_pet.xml
@@ -90,7 +90,7 @@
                 android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3"
+                app:layout_constraintTop_toBottomOf="@+id/address_user_pet"
                 android:hint="Informacion"
                 app:counterEnabled="true"
                 app:counterMaxLength="300">
@@ -117,7 +117,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/address_user_pet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
